@@ -77,14 +77,20 @@ toolbar_to_widget (GConfPropertyEditor *peditor, GConfValue *value)
 static void
 dialog_button_clicked_cb (GtkDialog *dialog, gint response_id, GConfChangeSet *changeset) 
 {
-  switch (response_id)
-    {
-    case RESPONSE_CLOSE:
-    case GTK_RESPONSE_DELETE_EVENT:
-    default:
-      gtk_main_quit ();
-      break;
-    }
+	if (response_id == GTK_RESPONSE_HELP) {
+		GError *error = NULL;
+
+		/* TODO : get this written */
+		gnome_help_display_desktop (NULL,
+			"control-center-manual",
+			"config-ui-properties.xml",
+			"CONFIGURATION", &error);
+		if (error) {
+			g_warning ("help error: %s\n", error->message);
+			g_error_free (error);
+		}
+	} else
+		gtk_main_quit ();
 }
 
 static GladeXML *
