@@ -1,3 +1,8 @@
+2002-05-09  Jody Goldberg <jody@gnome.org>
+
+	* gnome-ui-properties.glade : add a help button.
+	* gnome-ui-properties.c (dialog_button_clicked_cb) : ditto.
+
 2002-05-06  jacob berkman  <jacob@ximian.com>
 
 	* ui-properties.glade.h: remove unused file
